Fix wrong height of left gutter in editor view (displaying text lines)

--- a/src/webui/app/assets/stylesheets/cm2/suse.css
+++ b/src/webui/app/assets/stylesheets/cm2/suse.css
@@ -21,6 +21,8 @@
   text-align: right;
   padding: .4em .2em .4em .4em;
   white-space: pre !important;
+  /* gutter-text should have same height as CodeMirror-lines */
+  line-height: normal;
 }
 .CodeMirror-lines {
   padding: .4em;
